--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -58,16 +58,17 @@ Eu tinha iniciado (faz um tempo) um código para retornar uma tabela de análise
 
 * Versão <2020-10-29 qui>
 
-** Seção empíricas
+** Seção empírica
 
 - Feitas algumas pequenas correções no inglês
 - Dividida em duas subseções
-- [ ] Ajustadas proporções e qualidade dos gráficos
+- Ajustadas proporções e qualidade dos gráficos
 - Gráficos foram adaptados para escala de cinza
 - Foram incluídas algumas referências empíricas
 - Foram deixadas marcas de edição para inclusão posterior da taxa própria (sugestão)
 - Incluída explicação da curva de concentração
-- [ ] Testado gráfico das curvas de concentração em diferentes axis
+- Testado gráfico das curvas de concentração em diferentes axis
+- Algumas padronizações dos gráficos (tamanho da legenda e dos eixos)
 
 
 ** Modelo
