--- a/Articles/SFC/Empirical.org
+++ b/Articles/SFC/Empirical.org
@@ -1,11 +1,9 @@
-#+PROPERTY: header-args:ipython :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
+#+PROPERTY: header-args:python :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py :eval never-export :python /usr/bin/python3
 * Empirical TODOs and Setups                                       :noexport:
 
 ** Loading packages
    
-#+BEGIN_SRC ipython
-%config InlineBackend.figure_format = 'retina'
-
+#+BEGIN_SRC python
 import pandas as pd
 import numpy as np
 import matplotlib.pyplot as plt
@@ -14,25 +12,24 @@ import pandas_datareader.data as web
 import datetime
 from datetime import datetime as dt
 
-sns.set_context('paper')
+sns.set_context('talk')
 plt.style.use('seaborn-white')
 
 start = datetime.datetime(1951, 12, 1)
 end = datetime.datetime(2019, 3, 1)
-
-def salvar_grafico(file_name, extension=".png", pasta="./figs/"):
-    fig.savefig(pasta + file_name + extension, dpi = 300, bbox_inches = 'tight',
-    pad_inches = 0.2, transparent = False,)
 #+END_SRC
 
 #+RESULTS:
 :results:
-# Out [10]: 
 :end:
 
 ** Functions
 
-#+BEGIN_SRC ipython :results output :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
+#+BEGIN_SRC python :results output :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
+def salvar_grafico(file_name, extension=".png", pasta="./figs/"):
+    fig.savefig(pasta + file_name + extension, dpi = 300, bbox_inches = 'tight',
+    pad_inches = 0.2, transparent = False,)
+
 def crise_subprime(axes, alpha=0.4):
     axes.axvspan(
     xmin='2007-12-01', 
@@ -58,12 +55,12 @@ def crises(axes, color='lightgray', alpha=0.4, zorder=1):
 
 #+RESULTS:
 :results:
-# Out [21]: 
 :end:
 
 ** Getting data
    
-#+BEGIN_SRC ipython :async t :results output :session empirical :exports results :tangle ./codes/Empirical_Motivation.py
+*** Cycle related variables
+#+BEGIN_SRC python
 df = web.DataReader(
     [
         'GDP',
@@ -90,11 +87,11 @@ df.to_csv('./data/Cycle.csv')
 
 #+RESULTS:
 :results:
-63 - 86d642db-e11d-4509-aa92-e3935a369992 <output> <interrupt>
 :end:
 
+*** Own rate of interest related variables
 
-#+BEGIN_SRC ipython :async t :results output :session empirical :exports results :tangle ./codes/Empirical_Motivation.py
+#+BEGIN_SRC python
 start=dt(1987,1,1)
 end=dt(2019,10,1)
 
@@ -135,314 +132,17 @@ df.to_csv("./data/OwnInterestRate_data.csv")
 
 #+RESULTS:
 :results:
-64 - 82767da6-004c-41d8-94ce-333cf828b280 <output> <interrupt>
 :end:
 
 ** Residuals
 
-#+BEGIN_SRC ipython :async t :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
-df = pd.read_csv(
-    './data/OwnInterestRate_data.csv',
-    index_col = [0],
-    parse_dates = True
-)
+Code not used anymore, so eval is set to no
+*** Taxa própria 3D
 
-df = df.merge(
-    pd.read_csv(
-        './data/Cycle.csv',
-        index_col = [0],
-        parse_dates = True
-    ),
-    left_index=True, right_index=True
-)
 
-sns.set_context('talk')
-fig, ax = plt.subplots(1,2, figsize=(2*8,5),
-                       sharex=True, sharey=True
-)
-
-
-
-sns.scatterplot(y = 'Housing share', x='Own interest rate', data=df["1992-01":"2001-12"],
-                ax=ax[0], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='Own interest rate', data=df["1992-01":"2001-12"],
-             ax=ax[0], sort=False, color = 'black')
-ax[0].set_title("1992 (I) - 2001 (IV)")
-
-sns.scatterplot(y = 'Housing share', x='Own interest rate', data=df["2001-12":"2009-07"],
-                ax=ax[1], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='Own interest rate', data=df["2001-12":"2009-07"],
-             ax=ax[1], sort=False, color = 'black')
-ax[1].set_title("2001 (IV) - 2009 (II)")
-
-
-sns.despine()
-fig.tight_layout(rect=[0, 0.03, 1, 1])
-plt.show()
-
-fig.savefig("./figs/Own_Cycle.png", transparent = True, dpi = 300)
-
-#+END_SRC
-
-#+RESULTS:
-:results:
-65 - c96451fb-4ee2-480b-9667-de15002b080d <output> <interrupt>
-:end:
-
-
-
-#+BEGIN_SRC latex
-\begin{figure}[htb]
-    \centering
-        \caption{Share of residential investment and Houses own interest rate\\\centering Before and after housing bubble\\\centering (Dots size grow in  time)} 
-    \includegraphics[width = 0.65\textwidth]{./figs/Own_Cycle.png}
-    \label{fig:cycles}
-    \caption*{\textbf{Source:} Federal Reserve Bank of St. Louis, authors’ elaboration.}
-\end{figure}
-#+END_SRC
-
-#+RESULTS:
-#+begin_export latex
-\begin{figure}[htb]
-    \centering
-        \caption{Share of residential investment and Houses own interest rate\\\centering Before and after housing bubble\\\centering (Dots size grow in  time)} 
-    \includegraphics[width = 0.65\textwidth]{./figs/Own_Cycle.png}
-    \label{fig:cycles}
-    \caption*{\textbf{Source:} Federal Reserve Bank of St. Louis, authors’ elaboration.}
-\end{figure}
-#+end_export
-
-
-#+BEGIN_SRC ipython :async t :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
-fig, ax = plt.subplots()
-
-df['H-GDP'].plot(color = 'black', label = 'Residential investment/GDP', ax = ax)
-ax.axvspan(xmin = "1953-07", xmax='1954-04', color = "lightgray", label = 'Recession')
-ax.axvspan(xmin = "1957-08", xmax='1958-05', color = "lightgray", label = '')
-ax.axvspan(xmin = "1960-05", xmax='1961-02', color = "lightgray", label = '')
-ax.axvspan(xmin = "1969-12", xmax='1970-11', color = "lightgray", label = '')
-ax.axvspan(xmin = "1973-11", xmax='1975-03', color = "lightgray", label = '')
-ax.axvspan(xmin = "1980-01", xmax='1980-07', color = "lightgray", label = '')
-ax.axvspan(xmin = "1981-07", xmax='1982-01', color = "lightgray", label = '')
-ax.axvspan(xmin = "1990-07", xmax='1991-03', color = "lightgray", label = '')
-ax.axvspan(xmin = "2001-03", xmax='2001-11', color = "lightgray", label = '')
-ax.axvspan(xmin = "2007-12", xmax='2009-07', color = "lightgray", label = '')
-ax.legend()
-sns.despine()
-fig.savefig("./figs/housing_gdp.png", transparent = True, dpi = 300)
-plt.show()
-#+END_SRC
-
-#+RESULTS:
-:results:
-66 - d65f11da-12bb-4214-b1dd-d572b125f426 <output> <interrupt>
-:end:
-
-
-#+BEGIN_SRC ipython :async t :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
-df = pd.read_csv(
-    './data/OwnInterestRate_data.csv',
-    index_col = [0],
-    parse_dates = True
-)
-
-df = df.merge(
-    pd.read_csv(
-        './data/Cycle.csv',
-        index_col = [0],
-        parse_dates = True
-    ),
-    left_index=True, right_index=True
-)
-
-sns.set_context('talk')
-fig, ax = plt.subplots(1,2, figsize=(2*8,5),
-                       sharex=True, sharey=True
-)
-
-
-
-sns.scatterplot(x = 'Housing share', y='Durables', data=df["1992-01":"2001-12"],
-                ax=ax[0], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(x = 'Housing share', y='Durables', data=df["1992-01":"2001-12"],
-             ax=ax[0], sort=False, color = 'black')
-ax[0].set_title("1992 (I) - 2001 (IV)")
-
-sns.scatterplot(x = 'Housing share', y='Durables', data=df["2001-12":"2009-07"],
-                ax=ax[1], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(x = 'Housing share', y='Durables', data=df["2001-12":"2009-07"],
-             ax=ax[1], sort=False, color = 'black')
-ax[1].set_title("2001 (IV) - 2009 (II)")
-
-
-sns.despine()
-fig.tight_layout(rect=[0, 0.03, 1, 1])
-plt.show()
-
-fig.savefig("./figs/Durables.png", transparent = True, dpi = 300)
-#+END_SRC
-
-#+RESULTS:
-:results:
-67 - d21deaae-6d95-4ac4-8096-83d74e4cff8e <output> <interrupt>
-:end:
-
-
-*** Consumo de bens duráveis
-
-@@comment: Importância da bolha de ativos para explicar o investimento residencial e, por conseguinte, o ciclo econômico comment@@
-There is also an indirect relation between residential investment and durables goods consumption. Real estate constitutes a significant portion of household wealth so houses serves as collateral to borrowing cite:teixeira_uma_2011. 
-As a consequence of U.S. institutional arrangement, households could increase their indebtedness as house
-prices went up (see Figure ref:fig:debt) as a way to ``make'' capital gains without selling their houses during the 2000s housing bubble cite:teixeira_crescimento_2015,hay_failure_2013. 
-The relation between households indebtedness and real estate inflation also describes the increasing gap between assets and liabilities in the course of the Great Recession[fn:Divida_Precos]. 
-
-[fn:Divida_Precos] This co-movement results from the housing prices burst (post-2005) and  the insensitivity of households’ financial commitments. In other words, real estate (assets) has a market value while debt (liabilities) has a contractual one, thus, households net worth decreases
-onset of the subprime crisis.
-
-
-Figure ref:fig:Durables_cycles depicts the association between residential investment and durable goods consumption before, during and after the housing bubble.
-From 1992 to 2001, both durable goods consumption and residential investment share increase as long as houses own interest rate decreases.
-During the housing bubble (2001-2005), residential investment growth rate increases while houses own interest rate sharply decreases (see Figure ref:propria_investo).
-As a result, both residential investment and durable goods consumption share have a relatively constant proportion.
-On the aftermath of the housing burst (2005-2009), houses own interest rate increases and is followed by a sharp decrease in both residential investment and durable goods consumption.
-Therefore, real estate inflation and durable goods consumption are connected in the U.S. and have relevant implications for the business cycle [fn::textcites:zezza_u.s._2008,barba_rising_2009, for instance, also report that credit-financed consumption was one of the main drivers of economic growth before the Great Recession.]. 
-
-
-
-
-
-** Gráficos
-
-*** Ciclos 
-#+BEGIN_SRC ipython
-df = pd.read_csv(
-    './data/Cycle.csv',
-    index_col = [0],
-    parse_dates = True
-)
-sns.set_context('talk')
-fig, ax = plt.subplots(2,3, sharex=True, sharey=True, squeeze=False, figsize=(8,5))
-
-sns.scatterplot(y = 'Housing share', x='TCU', data=df["1970-12":"1975-01"], ax=ax[0,0], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='TCU', data=df["1970-12":"1975-01"], ax=ax[0,0], sort=False, color = 'black')
-ax[0,0].set_title("1970 (IV) - 1975 (I)")
-
-sns.scatterplot(y = 'Housing share', x='TCU', data=df["1975-01":"1980-10"], ax=ax[0,1], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='TCU', data=df["1975-01":"1980-10"], ax=ax[0,1], sort=False, color = 'black')
-ax[0,1].set_title("1977 (I) - 1980 (III)")
-
-sns.scatterplot(y = 'Housing share', x='TCU', data=df["1980-10":"1982-12"], ax=ax[0,2], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='TCU', data=df["1980-10":"1982-12"], ax=ax[0,2], sort=False, color = 'black')
-ax[0,2].set_title("1980 (III) - 1982 (IV)")
-
-sns.scatterplot(y = 'Housing share', x='TCU', data=df["1982-12":"1991-01"], ax=ax[1,0], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='TCU', data=df["1982-12":"1991-01"], ax=ax[1,0], sort=False, color = 'black')
-ax[1,0].set_title("1982 (IV) - 1991 (I)")
-
-sns.scatterplot(y = 'Housing share', x='TCU', data=df["1991-01":"2001-12"], ax=ax[1,1], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='TCU', data=df["1991-01":"2001-12"], ax=ax[1,1], sort=False, color = 'black')
-ax[1,1].set_title("1991 (I) - 2001 (IV)")
-
-sns.scatterplot(y = 'Housing share', x='TCU', data=df["2001-12":"2009-07"], ax=ax[1,2], size='Year', sizes = (5,100), color = 'black', legend=False)
-sns.lineplot(y = 'Housing share', x='TCU', data=df["2001-12":"2009-07"], ax=ax[1,2], sort=False, color = 'black')
-ax[1,2].set_title("2001 (IV) - 2009 (II)")
-
-
-sns.despine()
-ax[0,0].set_ylabel(""); ax[1,0].set_xlabel('')
-ax[1,0].set_ylabel(""); ax[1,1].set_xlabel(''); ax[1,2].set_xlabel('')
-
-fig.tight_layout(rect=[0, 0.03, 1, 0.90])
-fig.text(0.5, 0.03, 'Capacity utilization ratio (Total Industry)', ha='center', fontsize =12)
-fig.text(0, 0.5, 'Residential Investment/GDP', va='center', rotation='vertical', fontsize=12)
-#fig.tight_layout(rect=[0, 0.03, 1, 1])
-plt.show()
-
-fig.savefig("./figs/cycles.png", transparent = True, dpi = 300)
-#+END_SRC
-
-#+RESULTS:
-:results:
-61 - 6785c99a-cca3-4cbd-bb19-653a26f269e9 <output> <interrupt>
-:end:
-
-
-#+BEGIN_SRC ipython :async t :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
-df = pd.read_csv(
-    './data/OwnInterestRate_data.csv',
-    index_col = [0],
-    parse_dates = True
-)
-
-sns.set_context('paper')
-fig, ax = plt.subplots(figsize=(8,5))
-
-df[['Real mortgage interest rate', "Own interest rate", '$g_{I_h}$']].plot(ax=ax, lw=3, color = ("gray", "black", "darkgray"))
-
-sns.despine()
-plt.show()
-salvar_grafico("Own_gI")
-#+END_SRC
-
-#+RESULTS:
-:results:
-69 - cd33c5d0-e7fb-45d0-94c5-ef129dabef3a <output> <interrupt>
-:end:
-
-
-*** Recessões e taxa de investimento residencial
-
-#+BEGIN_SRC ipython
-df = web.DataReader(
-    [
-        'GDP',
-        'PRFI',
-    ], 
-    'fred', 
-    start, end
-)
-df['H-GDP'] = df['PRFI']/df['GDP']
-
-fig, ax = plt.subplots(figsize=(16, 10))
-
-df['H-GDP'].plot(color = 'black', label = 'Residential investment/GDP', ax = ax, lw=2.5)
-
-#ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
-#              (df['H-GDP'].pct_change() > 0.0).values[np.newaxis],
-#              cmap='Blues', alpha=0.3, label="$g_{I_h} > g$",
-#              zorder=-1,
-#)
-
-#ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
-#              (df['H-GDP'].pct_change() < 0.0).values[np.newaxis],
-#              cmap='Reds', alpha=0.3, label="$g_{I_h} < g$", 
-#              zorder=-1,
-#)
-
-crises(ax)
-ax.legend()
-
-sns.despine()
-plt.show()
-salvar_grafico(file_name="res_share")
-#+END_SRC
-
-#+RESULTS:
-:results:
-# Out [24]: 
-# text/plain
-: <Figure size 1152x720 with 1 Axes>
-
-# image/png
-[[file:obipy-resources/55f4d82f99285b53283e312a47760264590346bb/d77eeea37ad49ce7afc84e37c807a5557fe9f1f6.png]]
-:end:
-
-*** Taxa própria
-
-
-#+BEGIN_SRC ipython :async t :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py :eval no
+#+BEGIN_SRC python :eval no
 from mpl_toolkits.mplot3d import Axes3D
-import numpy as np
+
 
 df = pd.read_csv(
     './data/OwnInterestRate_data.csv',
@@ -533,7 +233,7 @@ fig.savefig("./figs/Durables_3D.png", transparent = True, dpi = 300)
 [[file:obipy-resources/55f4d82f99285b53283e312a47760264590346bb/1fb6d99995ff6d278760aff7d52468fcc6cf36cc.png]]
 :end:
 
-#+BEGIN_SRC ipython
+#+BEGIN_SRC python :eval no
 df = pd.read_csv(
     './data/OwnInterestRate_data.csv',
     index_col = [0],
@@ -580,7 +280,7 @@ fig.savefig("./figs/own_Ih.png", transparent = True, dpi = 300)
 73 - 31a53fd3-2156-4a9e-963d-5e5bfa1b108b <output> <interrupt>
 :end:
 
-#+BEGIN_SRC ipython
+#+BEGIN_SRC python :eval no
 df = pd.read_csv(
     './data/OwnInterestRate_data.csv',
     index_col = [0],
@@ -626,7 +326,7 @@ fig.savefig("./figs/Durables_Ih.png", transparent = True, dpi = 300)
 74 - 058bd355-6ca4-4135-92c1-d9a2fab78f1e <output> <interrupt>
 :end:
 
-#+BEGIN_SRC ipython
+#+BEGIN_SRC python :eval no
 df = pd.read_csv(
     './data/OwnInterestRate_data.csv',
     index_col = [0],
@@ -672,7 +372,7 @@ fig.savefig("./figs/Durables_Own.png", transparent = True, dpi = 300)
 75 - fbb7e256-0eb5-4106-89b7-778ca3c61780 <output> <interrupt>
 :end:
 
-#+BEGIN_SRC ipython
+#+BEGIN_SRC python :eval no
 df = pd.read_csv(
     './data/OwnInterestRate_data.csv',
     index_col = [0],
@@ -716,124 +416,183 @@ fig.savefig("./figs/Durables_Ih_own.png", transparent = True, dpi = 300)
 \end{figure}
 #+END_SRC
 
+*** Housing share and own rate of interest cycles
 
-*** Curva de concentração
-
-#+BEGIN_SRC ipython 
-df = pd.read_excel(
-    './data/SCF_merged.xlsx', 
-    sheet_name='Riqueza',
-    index_col=[0]
+#+BEGIN_SRC python :eval no
+df = pd.read_csv(
+    './data/OwnInterestRate_data.csv',
+    index_col = [0],
+    parse_dates = True
 )
 
-imoveis = df.loc['Imóveis',:]
-imoveis = imoveis.drop(['Percentil da riqueza'], axis='columns')
-imoveis.index = [.249, .499, .749, .899, 1]
-imoveis = imoveis/100
-
-acoes = df.loc['Ações',:]
-acoes = acoes.drop(['Percentil da riqueza'], axis='columns')
-acoes.index = [.249, .499, .749, .899, 1]
-acoes = acoes/100
-
-secund = df.loc['Secundário',:]
-secund = secund.drop(['Percentil da riqueza'], axis='columns')
-secund.index = [.249, .499, .749, .899, 1]
-secund = secund/100
-
-# Suavizando curvas. Não utilizado
-def suavizacao(serie, n=1000, k=2):
-
-    xnew = np.linspace(serie.min().min(), serie.max().max(), n) 
-    suavizado = serie.apply(lambda x: make_interp_spline(x.index, x, k=k)(xnew))
-    suavizado = suavizado[suavizado > 0].dropna()
-    suavizado.index = suavizado.index/n
-    return suavizado
-#+END_SRC
-
-#+RESULTS:
-:results:
-# Out [27]: 
-:end:
-
-#+BEGIN_SRC ipython
-import numpy as np
-import matplotlib.patheffects as pe
-fig, ax = plt.subplots(figsize=(16, 10))
-
-ax.plot(
-    np.linspace(0,0), 
-    np.linspace(0,0),
-    color='white',
-    ls='None',
-    label='Primary\n'
+df = df.merge(
+    pd.read_csv(
+        './data/Cycle.csv',
+        index_col = [0],
+        parse_dates = True
+    ),
+    left_index=True, right_index=True
 )
 
-imoveis.loc[:, imoveis.columns <= 2010].plot(
-    ax=ax,
-    cmap="gray_r", 
-    linewidth=2.5,
-    ls = "--",
-    path_effects=[pe.Stroke(linewidth=4.0, foreground='k'), pe.Normal()]
+sns.set_context('talk')
+fig, ax = plt.subplots(1,2, figsize=(2*8,5),
+                       sharex=True, sharey=True
 )
 
-ax.plot(
-    np.linspace(0,0), 
-    np.linspace(0,0),
-    color='white',
-    ls='None',
-    label='Secoundary\n'
-)
 
-secund.loc[:, secund.columns <= 2010].plot(
-    ax=ax,
-    cmap="gray_r", 
-    linewidth=2.5,
-    ls="-.",
-    path_effects=[pe.Stroke(linewidth=4.0, foreground='k'), pe.Normal()]
-)
 
-ax.legend(ncol=2, frameon=True, facecolor='white', framealpha=2, edgecolor='black')
+sns.scatterplot(y = 'Housing share', x='Own interest rate', data=df["1992-01":"2001-12"],
+                ax=ax[0], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='Own interest rate', data=df["1992-01":"2001-12"],
+             ax=ax[0], sort=False, color = 'black')
+ax[0].set_title("1992 (I) - 2001 (IV)")
 
-ax.plot(
-    np.linspace(*ax.get_xlim()), 
-    np.linspace(*ax.get_xlim()),
-    color='black',
-    ls='-',
-)
+sns.scatterplot(y = 'Housing share', x='Own interest rate', data=df["2001-12":"2009-07"],
+                ax=ax[1], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='Own interest rate', data=df["2001-12":"2009-07"],
+             ax=ax[1], sort=False, color = 'black')
+ax[1].set_title("2001 (IV) - 2009 (II)")
 
-ax.arrow(0.6, 0.6, +0.08, -0.08, head_width=0.01, head_length=0.01, fc='gray', ec='black')
-ax.text(.61,.53, "Concentration", fontsize=12, rotation=-30)
-ax.arrow(0.6, 0.6, -0.07, 0.07, head_width=0.01, head_length=0.01, fc='gray', ec='black')
-ax.text(.54,.61, "Deconcentration", fontsize=12, rotation=-30)
-ax.text(.8,.75, "Perfect equality line", fontsize=12, rotation=35)
 
-ax.set_xlim(0,1)
-ax.set_ylim(0,1)
-
-ax.set_xlabel('Cumulative proportion of Households\n(Households without wealth omiited)')
-ax.set_ylabel('Asset cumulative proportion\n(Primary and Secoundary houses)')
-ax.secondary_yaxis('right')
-
+sns.despine()
+fig.tight_layout(rect=[0, 0.03, 1, 1])
 plt.show()
-salvar_grafico(file_name="Concentration_Curve")
+
+fig.savefig("./figs/Own_Cycle.png", transparent = True, dpi = 300)
+
 #+END_SRC
 
 #+RESULTS:
 :results:
-# Out [29]: 
-# text/plain
-: <Figure size 1152x720 with 1 Axes>
-
-# image/png
-[[file:obipy-resources/55f4d82f99285b53283e312a47760264590346bb/cfd37483bc2f485517cf0ddd5c07ad389acfb61b.png]]
+65 - c96451fb-4ee2-480b-9667-de15002b080d <output> <interrupt>
 :end:
 
 
-*** Dívida das famílias
+
+#+BEGIN_SRC latex
+\begin{figure}[htb]
+    \centering
+        \caption{Share of residential investment and Houses own interest rate\\\centering Before and after housing bubble\\\centering (Dots size grow in  time)} 
+    \includegraphics[width = 0.65\textwidth]{./figs/Own_Cycle.png}
+    \label{fig:cycles}
+    \caption*{\textbf{Source:} Federal Reserve Bank of St. Louis, authors’ elaboration.}
+\end{figure}
+#+END_SRC
+
+#+RESULTS:
+#+begin_export latex
+\begin{figure}[htb]
+    \centering
+        \caption{Share of residential investment and Houses own interest rate\\\centering Before and after housing bubble\\\centering (Dots size grow in  time)} 
+    \includegraphics[width = 0.65\textwidth]{./figs/Own_Cycle.png}
+    \label{fig:cycles}
+    \caption*{\textbf{Source:} Federal Reserve Bank of St. Louis, authors’ elaboration.}
+\end{figure}
+#+end_export
+
+*** Residential investment share on gdp (old version)
 
 
-#+BEGIN_SRC ipython :async t :results output drawer :session empirical :exports none :tangle ./codes/Empirical_Motivation.py
+#+BEGIN_SRC python :eval no
+fig, ax = plt.subplots()
+
+df['H-GDP'].plot(color = 'black', label = 'Residential investment/GDP', ax = ax)
+ax.axvspan(xmin = "1953-07", xmax='1954-04', color = "lightgray", label = 'Recession')
+ax.axvspan(xmin = "1957-08", xmax='1958-05', color = "lightgray", label = '')
+ax.axvspan(xmin = "1960-05", xmax='1961-02', color = "lightgray", label = '')
+ax.axvspan(xmin = "1969-12", xmax='1970-11', color = "lightgray", label = '')
+ax.axvspan(xmin = "1973-11", xmax='1975-03', color = "lightgray", label = '')
+ax.axvspan(xmin = "1980-01", xmax='1980-07', color = "lightgray", label = '')
+ax.axvspan(xmin = "1981-07", xmax='1982-01', color = "lightgray", label = '')
+ax.axvspan(xmin = "1990-07", xmax='1991-03', color = "lightgray", label = '')
+ax.axvspan(xmin = "2001-03", xmax='2001-11', color = "lightgray", label = '')
+ax.axvspan(xmin = "2007-12", xmax='2009-07', color = "lightgray", label = '')
+ax.legend()
+ax.set_xlabel('')
+sns.despine()
+fig.savefig("./figs/housing_gdp.png", transparent = True, dpi = 300)
+plt.show()
+#+END_SRC
+
+
+*** Durable goods and own rate of interest cycles
+
+#+BEGIN_SRC python :eval no
+df = pd.read_csv(
+    './data/OwnInterestRate_data.csv',
+    index_col = [0],
+    parse_dates = True
+)
+
+df = df.merge(
+    pd.read_csv(
+        './data/Cycle.csv',
+        index_col = [0],
+        parse_dates = True
+    ),
+    left_index=True, right_index=True
+)
+
+sns.set_context('talk')
+fig, ax = plt.subplots(1,2, figsize=(2*8,5),
+                       sharex=True, sharey=True
+)
+
+
+
+sns.scatterplot(x = 'Housing share', y='Durables', data=df["1992-01":"2001-12"],
+                ax=ax[0], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(x = 'Housing share', y='Durables', data=df["1992-01":"2001-12"],
+             ax=ax[0], sort=False, color = 'black')
+ax[0].set_title("1992 (I) - 2001 (IV)")
+
+sns.scatterplot(x = 'Housing share', y='Durables', data=df["2001-12":"2009-07"],
+                ax=ax[1], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(x = 'Housing share', y='Durables', data=df["2001-12":"2009-07"],
+             ax=ax[1], sort=False, color = 'black')
+ax[1].set_title("2001 (IV) - 2009 (II)")
+
+
+sns.despine()
+fig.tight_layout(rect=[0, 0.03, 1, 1])
+plt.show()
+
+fig.savefig("./figs/Durables.png", transparent = True, dpi = 300)
+#+END_SRC
+
+#+RESULTS:
+:results:
+67 - d21deaae-6d95-4ac4-8096-83d74e4cff8e <output> <interrupt>
+:end:
+
+
+*** Consumo de bens duráveis (Texto)
+
+@@comment: Importância da bolha de ativos para explicar o investimento residencial e, por conseguinte, o ciclo econômico comment@@
+There is also an indirect relation between residential investment and durables goods consumption. Real estate constitutes a significant portion of household wealth so houses serves as collateral to borrowing cite:teixeira_uma_2011. 
+As a consequence of U.S. institutional arrangement, households could increase their indebtedness as house
+prices went up (see Figure ref:fig:debt) as a way to ``make'' capital gains without selling their houses during the 2000s housing bubble cite:teixeira_crescimento_2015,hay_failure_2013. 
+The relation between households indebtedness and real estate inflation also describes the increasing gap between assets and liabilities in the course of the Great Recession[fn:Divida_Precos]. 
+
+[fn:Divida_Precos] This co-movement results from the housing prices burst (post-2005) and  the insensitivity of households’ financial commitments. In other words, real estate (assets) has a market value while debt (liabilities) has a contractual one, thus, households net worth decreases
+onset of the subprime crisis.
+
+
+Figure ref:fig:Durables_cycles depicts the association between residential investment and durable goods consumption before, during and after the housing bubble.
+From 1992 to 2001, both durable goods consumption and residential investment share increase as long as houses own interest rate decreases.
+During the housing bubble (2001-2005), residential investment growth rate increases while houses own interest rate sharply decreases (see Figure ref:propria_investo).
+As a result, both residential investment and durable goods consumption share have a relatively constant proportion.
+On the aftermath of the housing burst (2005-2009), houses own interest rate increases and is followed by a sharp decrease in both residential investment and durable goods consumption.
+Therefore, real estate inflation and durable goods consumption are connected in the U.S. and have relevant implications for the business cycle [fn::textcites:zezza_u.s._2008,barba_rising_2009, for instance, also report that credit-financed consumption was one of the main drivers of economic growth before the Great Recession.]. 
+
+
+
+
+
+*** Dívida das famílias e preço dos imóveis
+
+
+#+BEGIN_SRC python :eval no
 start = dt(1947, 1, 1)
 end = dt(2015, 1, 1)
 
@@ -878,8 +637,261 @@ salvar_grafico(file_name="Debt_Prices")
 
 #+RESULTS:
 :results:
-72 - 5e32d5df-13d2-4473-9663-5c39f2b9bbf8 <output> <interrupt>
 :end:
+
+
+** Gráficos
+
+*** Ciclos entre grau de utilização e taxa de investimento residencial
+#+BEGIN_SRC python :results graphics file :file ./figs/cycles.png
+df = pd.read_csv(
+    './data/Cycle.csv',
+    index_col = [0],
+    parse_dates = True
+)
+
+fig, ax = plt.subplots(2,3, sharex=True, sharey=True, squeeze=False, figsize=(19.20,10.80))
+
+sns.scatterplot(y = 'Housing share', x='TCU', data=df["1970-12":"1975-01"], ax=ax[0,0], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='TCU', data=df["1970-12":"1975-01"], ax=ax[0,0], sort=False, color = 'black', lw=2)
+ax[0,0].set_title("1970 (IV) - 1975 (I)", fontsize =15)
+
+sns.scatterplot(y = 'Housing share', x='TCU', data=df["1975-01":"1980-10"], ax=ax[0,1], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='TCU', data=df["1975-01":"1980-10"], ax=ax[0,1], sort=False, color = 'black', lw=2)
+ax[0,1].set_title("1977 (I) - 1980 (III)", fontsize =15)
+
+sns.scatterplot(y = 'Housing share', x='TCU', data=df["1980-10":"1982-12"], ax=ax[0,2], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='TCU', data=df["1980-10":"1982-12"], ax=ax[0,2], sort=False, color = 'black', lw=2)
+ax[0,2].set_title("1980 (III) - 1982 (IV)", fontsize =15)
+
+sns.scatterplot(y = 'Housing share', x='TCU', data=df["1982-12":"1991-01"], ax=ax[1,0], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='TCU', data=df["1982-12":"1991-01"], ax=ax[1,0], sort=False, color = 'black', lw=2)
+ax[1,0].set_title("1982 (IV) - 1991 (I)", fontsize =15)
+
+sns.scatterplot(y = 'Housing share', x='TCU', data=df["1991-01":"2001-12"], ax=ax[1,1], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='TCU', data=df["1991-01":"2001-12"], ax=ax[1,1], sort=False, color = 'black', lw=2)
+ax[1,1].set_title("1991 (I) - 2001 (IV)", fontsize =15)
+
+sns.scatterplot(y = 'Housing share', x='TCU', data=df["2001-12":"2009-07"], ax=ax[1,2], size='Year', sizes = (5,100), color = 'black', legend=False)
+sns.lineplot(y = 'Housing share', x='TCU', data=df["2001-12":"2009-07"], ax=ax[1,2], sort=False, color = 'black', lw=2)
+ax[1,2].set_title("2001 (IV) - 2009 (II)", fontsize =15)
+
+
+sns.despine()
+ax[0,0].set_ylabel(""); ax[1,0].set_xlabel('')
+ax[1,0].set_ylabel(""); ax[1,1].set_xlabel(''); ax[1,2].set_xlabel('')
+
+fig.text(0.5, 0.05, 'Capacity utilization ratio (Total Industry)', ha='center', fontsize =15)
+fig.text(0.085, 0.5, 'Residential Investment/GDP', va='center', rotation='vertical', fontsize=15)
+ax[1,0].tick_params(axis='both', which='major', labelsize=15)
+ax[1,1].tick_params(axis='both', which='major', labelsize=15)
+ax[1,2].tick_params(axis='both', which='major', labelsize=15)
+ax[0,0].tick_params(axis='both', which='major', labelsize=15)
+#fig.tight_layout(rect=[0, 0.03, 1, 1])
+#plt.show()
+
+fig.savefig("./figs/cycles.png", transparent = True, dpi = 300)
+plt.clf()
+#+END_SRC
+
+#+RESULTS:
+[[file:./figs/cycles.png]]
+
+
+*** Taxa própria e taxa de crescimento do investimento residencial
+
+#+BEGIN_SRC python :async t :results graphics file :file ./figs/Own_gI.png
+df = pd.read_csv(
+    './data/OwnInterestRate_data.csv',
+    index_col = [0],
+    parse_dates = True
+)
+
+sns.set_context('paper')
+fig, ax = plt.subplots(figsize=(19.20,10.80))
+
+df[['Real mortgage interest rate', "Own interest rate", '$g_{I_h}$']].plot(ax=ax, lw=3, color = ("gray", "black", "darkgray"))
+ax.legend(frameon=True, facecolor='white', framealpha=2, edgecolor='black', fontsize=15)
+ax.tick_params(axis='both', which='major', labelsize=15)
+sns.despine()
+#plt.show()
+salvar_grafico("Own_gI")
+plt.clf()
+#+END_SRC
+
+#+RESULTS:
+[[file:./figs/Own_gI.png]]
+
+
+*** Recessões e taxa de investimento residencial
+
+#+BEGIN_SRC python
+df = web.DataReader(
+    [
+        'GDP',
+        'PRFI',
+    ], 
+    'fred', 
+    start, end
+)
+df['H-GDP'] = df['PRFI']/df['GDP']
+
+fig, ax = plt.subplots(figsize=(19.20, 10.80))
+
+df['H-GDP'].plot(color = 'black', label = 'Residential investment/GDP', ax = ax, lw=2.5)
+
+#ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
+#              (df['H-GDP'].pct_change() > 0.0).values[np.newaxis],
+#              cmap='Blues', alpha=0.3, label="$g_{I_h} > g$",
+#              zorder=-1,
+#)
+
+#ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
+#              (df['H-GDP'].pct_change() < 0.0).values[np.newaxis],
+#              cmap='Reds', alpha=0.3, label="$g_{I_h} < g$", 
+#              zorder=-1,
+#)
+
+crises(ax)
+ax.legend(frameon=True, facecolor='white', framealpha=2, edgecolor='black', fontsize=15)
+ax.tick_params(axis='both', which='major', labelsize=15)
+ax.set_xlabel('')
+sns.despine()
+#plt.show()
+salvar_grafico(file_name="res_share")
+plt.clf()
+#+END_SRC
+
+#+RESULTS:
+:results:
+:end:
+
+
+
+*** Curva de concentração
+
+**** Dados
+
+#+BEGIN_SRC python 
+df = pd.read_excel(
+    './data/SCF_merged.xlsx', 
+    sheet_name='Riqueza',
+    index_col=[0]
+)
+
+imoveis = df.loc['Imóveis',:]
+imoveis = imoveis.drop(['Percentil da riqueza'], axis='columns')
+imoveis.index = [.249, .499, .749, .899, 1]
+imoveis = imoveis/100
+
+acoes = df.loc['Ações',:]
+acoes = acoes.drop(['Percentil da riqueza'], axis='columns')
+acoes.index = [.249, .499, .749, .899, 1]
+acoes = acoes/100
+
+secund = df.loc['Secundário',:]
+secund = secund.drop(['Percentil da riqueza'], axis='columns')
+secund.index = [.249, .499, .749, .899, 1]
+secund = secund/100
+
+# Suavizando curvas. Não utilizado
+def suavizacao(serie, n=1000, k=2):
+
+    xnew = np.linspace(serie.min().min(), serie.max().max(), n) 
+    suavizado = serie.apply(lambda x: make_interp_spline(x.index, x, k=k)(xnew))
+    suavizado = suavizado[suavizado > 0].dropna()
+    suavizado.index = suavizado.index/n
+    return suavizado
+#+END_SRC
+
+#+RESULTS:
+:results:
+:end:
+
+**** Gráfico
+
+#+BEGIN_SRC python
+import matplotlib.patheffects as pe
+#fig, ax = plt.subplots(figsize=(19.2, 10.8)) # one plot
+fig, ax = plt.subplots(1,2, figsize=(19.2, 10.8), sharey=True) # Two plots
+
+imoveis.loc[:, imoveis.columns <= 2010].plot(
+    ax=ax[0],
+    cmap="gray_r", 
+    linewidth=2.5,
+    ls = "-",
+    path_effects=[pe.Stroke(linewidth=4.0, foreground='k'), pe.Normal()],
+)
+
+ax[0].set_title('A - Primary houses concentration curve', fontsize=15)
+
+
+secund.loc[:, secund.columns <= 2010].plot(
+    ax=ax[1],
+    cmap="gray_r", 
+    linewidth=2.5,
+    ls="-",
+    path_effects=[pe.Stroke(linewidth=4.0, foreground='k'), pe.Normal()],
+)
+
+ax[1].set_title('B - Secondary houses concentration curve', fontsize=15)
+
+
+ax[0].plot(
+    np.linspace(0.0, 1.0), 
+    np.linspace(0.0, 1.0),
+    color='black',
+    ls='--',
+    label='Perfect equity line'
+)
+
+
+ax[1].plot(
+    np.linspace(0.0, 1.0), 
+    np.linspace(0.0, 1.0),
+    color='black',
+    ls='--',
+    label='Perfect equity line'
+)
+
+ax[0].legend(frameon=True, facecolor='white', framealpha=2, edgecolor='black', title='Primary houses', fontsize=12)
+ax[1].legend(frameon=True, facecolor='white', framealpha=2, edgecolor='black', title='Secondary houses', fontsize=12)
+
+ax[0].arrow(0.62, 0.72, +0.15, -0.15, head_width=0.01, head_length=0.02, fc='gray', ec='black')
+ax[0].text(.62,.62, "Concentration", fontsize=12, rotation=-45)
+ax[0].arrow(0.62, 0.72, -0.25, 0.25, head_width=0.01, head_length=0.02, fc='gray', ec='black')
+ax[0].text(.43,.79, "Deconcentration", fontsize=12, rotation=-45)
+
+
+
+
+ax[1].arrow(0.82, 0.22, +0.15, -0.15, head_width=0.01, head_length=0.02, fc='gray', ec='black')
+ax[1].text(.85,.1, "Concentration", fontsize=12, rotation=-45)
+ax[1].arrow(0.82, 0.22, -0.15, 0.15, head_width=0.01, head_length=0.02, fc='gray', ec='black')
+ax[1].text(.68,.24, "Deconcentration", fontsize=12, rotation=-45)
+
+
+ax[0].set_xlim(0,1); ax[0].set_ylim(0,1)
+ax[1].set_xlim(0,1); ax[1].set_ylim(0,1)
+ax[0].set_xlabel('Cumulative proportion of Households\n(Households without wealth omiited)', fontsize=14);
+ax[1].set_xlabel('Cumulative proportion of Households\n(Households without wealth omiited)', fontsize=14);
+ax[0].set_ylabel('Asset cumulative proportion\n(Primary or Secoundary houses)', fontsize=14)
+secax = ax[1].secondary_yaxis('right')
+ax[0].tick_params(axis='both', which='major', labelsize=15)
+ax[1].tick_params(axis='both', which='major', labelsize=15)
+secax.tick_params(axis='both', which='major', labelsize=15)
+
+#plt.show()
+plt.tight_layout()
+salvar_grafico(file_name="Concentration_Curve")
+plt.clf()
+#+END_SRC
+
+#+RESULTS:
+:results:
+:end:
+
+
 
 
 * Empirical Motivation                                               :ignore:
@@ -948,7 +960,7 @@ Following the Sraffian supermultiplier growth model, we conclude that increase o
 \begin{figure}[htb]
     \centering
         \caption{Share of residential investment and capacity utilization during business cycles\\\centering (Dots size grow in  time)} 
-    \includegraphics[width = 0.65\textwidth]{./figs/cycles.png}
+    \includegraphics[width = 0.9\textwidth]{./figs/cycles.png}
     \label{fig:cycles}
     \caption*{\textbf{Source:} Federal Reserve Bank of St. Louis, authors’ elaboration.}
 \end{figure}
